# palantir

./: .gitignore  Cargo.toml  GEMINI.md  README.md  ROADMAP.md  package-lock.json  package.json
.agents/skills/palantir-engineer/: SKILL.md
.agents/skills/palantir-engineer/references/: orchestration.md  testing.md
.claude/skills/: palantir-engineer
.gemini/: settings.json
core/: Cargo.toml
core/src/: client.rs  config.rs  lib.rs
core/src/actions/: events.rs  exec.rs  helm_local.rs  logs.rs  mod.rs  portforward.rs
core/src/models/: mod.rs
core/src/resources/: crd.rs  deployment.rs  generic.rs  helm.rs  mod.rs  namespace.rs  pod.rs  service.rs
core/tests/: config_pitfalls_it.rs  ephemeral_it.rs  event_pitfalls_it.rs  resource_lifecycle_it.rs  resource_pitfalls_it.rs
core/tests/common/: mod.rs
docs/: PHASE4_DESIGN.md  PHASE4_REFINEMENT_DESIGN.md  PHASE4_REPORT.md  PHASE4_SCALE_RESTART_DESIGN.md  PHASE5_EPHEMERAL_CONTAINER_DESIGN.md  PHASE6_DESIGN.md  POSTMORTEM_PHASE1.md  POSTMORTEM_PHASE2.md  POSTMORTEM_PHASE3.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/coverage/: clover.xml  coverage-final.json  index.html
frontend/coverage/components/: KubectlHint.tsx.html  ResourceDetail.tsx.html  Terminal.tsx.html  index.html
frontend/coverage/pages/: ResourcesPage.tsx.html  index.html
frontend/src/: App.tsx
frontend/src/components/: EventsViewer.tsx  KubectlHint.tsx  ResourceDetail.tsx  Terminal.tsx
frontend/src/pages/: HelmPage.tsx  PodsPage.tsx  ResourcesPage.tsx
frontend/src/styles/: globals.css
frontend/src/test/: CrdDiscovery.test.tsx  ResourceDetail.test.tsx  ResourceDetailDebug.test.tsx  ResourceDetailEdit.test.tsx  ResourceDetailEnv.test.tsx  Terminal.test.tsx
scripts/: build_windows.sh  cleanup_cluster.sh  setup_cluster.sh  verify_all.sh
src-tauri/: Cargo.toml  build.rs  package.json  palantir.exe.manifest  resources.rc  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: mod.rs  resource_cmd.rs  stream_cmd.rs
