[package]
name = "palantir-app"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
palantir-core = { path = "../core" }
uuid = { version = "1.0", features = ["v4"] }
kube = { version = "0.90.0", features = ["runtime", "derive", "ws", "client"] }
k8s-openapi = { version = "0.21.0", features = ["v1_28"] }
